refactor database handling